compiler-core/src/error/snapshots/gleam_core__error__tests__removed_package_names_invalid_with_some_suggestions.snap
---
source: compiler-core/src/error/tests.rs
expression: err.pretty_string()
---
error: Invalid package names

These are not valid package names:

  - gleam_otp@1
  - lustre@4
  - Wibble

Did you mean one of these:

  - gleam_otp
  - lustre

Package names must start with a lowercase letter and may only contain
lowercase letters, numbers and underscores.
