compiler-core/src/error/snapshots/gleam_core__error__tests__removed_package_names_invalid_without_suggestions.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: Invalid package name

This is not a valid package name, so it could not be removed.

  - Wibble

Package names must start with a lowercase letter and may only contain
lowercase letters, numbers and underscores.
