compiler-core/src/error/snapshots/gleam_core__error__tests__shell_program_not_found_bun_linux_other.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `bun` was not found. Is it installed?

Documentation for installing bun can be viewed here:
https://bun.sh/docs/installation/
