compiler-core/src/error/snapshots/gleam_core__error__tests__shell_program_not_found_deno_linux_other.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `deno` was not found. Is it installed?

Documentation for installing Deno can be viewed here:
https://docs.deno.com/runtime/getting_started/installation/
